Water tab: Made the particles in the bucket a little larger
# 0.00.94 (55642) Aug 22, 2011
Water tab: When the user drags back 2 sugar molecules to the bucket, recrystallize them
Water tab: Add back as many waters as were deleted when the sucrose was added to the model to conserve water molecule count
# 0.00.93 (55605) Aug 22, 2011
Water tab: Added a force to help dissolve salt
Water tab: Added Cl- and Na+ labels on salt ions
# 0.00.92 (55591) Aug 22, 2011
Water tab: Added more water molecules
Water tab: Performance improvements
Water tab: Added a sucrose label to appear on top of each sucrose molecule
Water tab: Fixed: dragging is broken when the sim window is resized
Water tab: Fixed: When grabbing a salt ion, it jumps to a different location right on first drag event
Water tab: Rewrote CrystalNode to require a list of particles, not a crystal
Water tab: Use different z-orderings to give make the water look as if it is at different 3d orientations
Water tab: Fixed: When the sugar molecule is near the edge of the container the image flickers on and off
Water tab: Use an extended boundary to prevent flickering when a water molecule wraps from one side to the other
Water tab: Wired up "show water charges" checkbox
Water tab: Add clipping for particle window graphic for sucrose and salt ions
Water tab: Added interactions with salt ions
Water tab: Fixed: Show sugar atom shouldn't change the color of salt ions
Water tab: Fixed: Salt ions go to the wrong bucket when removed from the model
Water tab: Fixed: Salt isn't removed from the model on reset all
Water tab: Fixed: Sucrose crystal should have a good structure in the bucket on initialization
Water tab: Added salt
Water tab: Generalized SucroseCrystalNode to CrystalNode
Rewrote Compound to iterate over particles, not constituents
Water tab: Added clipping for water molecules
Water tab: Increased the height of the particle window
Water tab: Moved buckets closer to the bottom of the canvas