@@ -1,3 +1,4 @@
+Water tab: Swapped the location of the water with the controls
 Water tab: Made the particles in the bucket a little larger
 # 0.00.94 (55642) Aug 22, 2011
 Water tab: When the user drags back 2 sugar molecules to the bucket, recrystallize them
